[gd_scene load_steps=2 format=3 uid="uid://66pky70uhtnf"]

[ext_resource type="Script" uid="uid://bweigo1uufec2" path="res://SQLController.gd" id="1_fn5yv"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fn5yv")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 70.0
offset_top = 80.0
offset_right = 243.0
offset_bottom = 500.0

[node name="InsertData" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Insert Data"

[node name="SelectData" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Select Data"

[node name="DeleteData" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Delete Data"

[node name="NameContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 781.0
offset_top = 65.0
offset_right = 1124.0
offset_bottom = 100.0

[node name="Label" type="Label" parent="NameContainer"]
layout_mode = 2
text = "Song Name:"

[node name="TextEdit" type="TextEdit" parent="NameContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ArtistContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 782.0
offset_top = 124.0
offset_right = 1122.0
offset_bottom = 163.0

[node name="Label" type="Label" parent="ArtistContainer"]
layout_mode = 2
text = "Artist Name"

[node name="TextEdit" type="TextEdit" parent="ArtistContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SongList" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 318.0
offset_top = 41.0
offset_right = 714.0
offset_bottom = 603.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="CurrentlyPlaying" type="Label" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 461.0
offset_right = 455.0
offset_bottom = 642.0

[connection signal="pressed" from="VBoxContainer/InsertData" to="." method="_on_insert_data_pressed"]
[connection signal="pressed" from="VBoxContainer/SelectData" to="." method="_on_select_data_pressed"]
[connection signal="pressed" from="VBoxContainer/DeleteData" to="." method="_on_delete_data_pressed"]
[connection signal="finished" from="AudioStreamPlayer2D" to="." method="_on_audio_stream_player_2d_finished"]
